# chess_engine

./: CMakeLists.txt  README.md  app  main.cpp
assets/images/chess_sets/LazaroveSeksualneFantazije/: bk.pixil  bp.pixil  wb.pixil  wq.pixil
assets/pixil/chess_sets/default/: bb.pixil  bk.pixil  bn.pixil  bq.pixil  br.pixil  wk.pixil  wn.pixil  wp.pixil  wr.pixil
include/config/: settings.hpp
include/engine/: attack_field.hpp  board.hpp  figure.hpp
include/gui/: board_renderer.hpp  color_selector.hpp  event_handler.hpp  resources.hpp  state.hpp  window.hpp
src/config/: settings.cpp
src/engine/: attack_field.cpp  board.cpp  figure.cpp
src/gui/: board_renderer.cpp  color_selector.cpp  event_handler.cpp  resources.cpp  window.cpp
